--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "ahooks": "^3.7.1",
     "classnames": "^2.3.2",
     "ionicons": "^6.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4",
     "mobx": "^6.1.8",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^7.1.0",
-    "mobx-react-lite": "^3.2.0"
+    "mobx-react-lite": "^3.2.0",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "typescript": "^4.8.3",
+    "web-vitals": "^2.1.4",
+    "dotbit": "^0.4.6",
+    "web3": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
