--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
     "dotbit": "^0.4.6",
-    "web3": "^1.7.0"
+    "web3": "^1.7.0",
+    "copy-to-clipboard": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
