--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "^18.0.6",
     "ahooks": "^3.7.1",
     "classnames": "^2.3.2",
+    "copy-to-clipboard": "^3.3.1",
+    "dotbit": "^0.4.6",
     "ionicons": "^6.0.3",
     "mobx": "^6.1.8",
     "mobx-persist": "^0.4.1",
@@ -26,9 +28,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
-    "dotbit": "^0.4.6",
-    "web3": "^1.7.0",
-    "copy-to-clipboard": "^3.3.1"
+    "web3": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
