--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "styled-components": "^6.0.0-rc.3",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
