--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@web3mq/client": "^1.0.14",
     "ahooks": "^3.7.1",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.1",
