feat: update login

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.5",
+    "prettier": "^3.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   }
